--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,5 +25,10 @@
 //     background-color: #CC915A;
 // }
 
+button.theme--light.v-btn.v-btn--disabled.v-btn--has-bg{
+    color: white !important;
+    background-color: #9A9590 !important;
+}
+
 
 
